--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Feb 24 15:17:41 KST 2020
-sdk.dir=/Users/ironman/Library/Android/sdk
+#Wed Feb 26 19:09:49 KST 2020
+sdk.dir=C\:\\Users\\T420\\AppData\\Local\\Android\\Sdk
