--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,6 @@ KEY_PASSWORD=kli6363kli
 # Automatically convert third-party libraries to use AndroidX
 android.debug.obsoleteApi=false
 
+android.useAndroidX=true
+
+android.enableJetifier=true
