--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.7'
     implementation 'com.github.katoro:typekit:1.0.1'
 
+    implementation 'com.android.support:design:28.0.0'
+
     // volley
     implementation 'com.android.volley:volley:1.1.1'
 
