- 내정보 차량관리 UI 일부 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -221,6 +221,12 @@
             android:theme="@style/AppTheme.NoActionBar"
             tools:ignore="LockedOrientationActivity" /> <!-- 설정 정보 시작 -->
 
+        <activity
+            android:name=".CarManageActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"
+            tools:ignore="LockedOrientationActivity" /> <!-- 차량관리 시작 -->
+
 
         <activity android:name=".TemplateActivity" /> <!-- template activity -->
         <provider
