Main Activity 배너 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,11 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     // For control over item selection of both touch and mouse driven selection
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0-rc01"
+
+    // Banner Slider
+    implementation 'com.ss.bannerslider:bannerslider:2.0.0'
+
+    // picasso - image loadder
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 }
