--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Mar 09 09:09:30 KST 2020
-sdk.dir=/Users/ironman/Library/Android/sdk
+#Sat Mar 14 15:10:21 KST 2020
+sdk.dir=C\:\\Users\\T420\\AppData\\Local\\Android\\Sdk
